removed attempts to sign in, will do later. now sign in button leads to organizer dashboard

--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AtlasEvents">
         <activity
-            android:name=".ActivitySignIn"
+            android:name=".OrganizerDashboardActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SignInActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
