implement entrant dashboard

--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:name=".SignUpActivity"
             android:exported="false" />
         <activity
-            android:name=".UserDashboardActivity"
+            android:name=".EntrantDashboardActivity"
             android:exported="false" />
         <activity
             android:name=".OrganizerDashboardActivity"
