--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
             android:name=".EntrantDashboardActivity"
             android:exported="false" />
         <activity
+            android:name=".EntrantProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".OrganizerDashboardActivity"
             android:exported="false" />
         <activity
