Profiles for organizer

--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
             android:name=".OrganizerDashboardActivity"
             android:exported="false" />
         <activity
+            android:name=".OrganizerProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".SignInActivity"
             android:exported="true">
             <intent-filter>
