Created a debug activity trying to test notifications

--- a/code/gradle/libs.versions.toml
+++ b/code/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ lifecycleViewmodelKtx = "2.9.4"
 firebaseInappmessagingDisplay = "22.0.2"
 firebaseMessaging = "25.0.1"
 firebaseAuth = "24.0.1"
+runtime = "1.0.0-alpha07"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -30,6 +31,7 @@ lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-view
 firebase-inappmessaging-display = { group = "com.google.firebase", name = "firebase-inappmessaging-display", version.ref = "firebaseInappmessagingDisplay" }
 firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging", version.ref = "firebaseMessaging" }
 firebase-auth = { group = "com.google.firebase", name = "firebase-auth", version.ref = "firebaseAuth" }
+runtime = { group = "androidx.xr.runtime", name = "runtime", version.ref = "runtime" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
