--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
         <activity
             android:name=".CreateEventActivity"
             android:exported="false" />
+        <activity android:name=".DebugNotificationActivity" />
+
         <activity
             android:name=".SignUpActivity"
             android:exported="false" />
