Skeletal event details, xml is broken, will fix after class

--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -19,10 +19,17 @@
             android:exported="false" />
         <activity
             android:name=".EntrantDashboardActivity"
-            android:exported="false" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
         <activity
             android:name=".EntrantProfileActivity"
             android:exported="false" />
+        <activity android:name=".EventDetailsActivity"
+            android:exported="false"/>
         <activity
             android:name=".OrganizerDashboardActivity"
             android:exported="false" />
