--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -15,8 +15,18 @@
         <activity
             android:name=".CreateEventActivity"
             android:exported="false" />
-        <activity android:name=".DebugNotificationActivity" />
-
+        <activity 
+            android:name=".DebugNotificationActivity" 
+            android:exported="false" />
+        <activity 
+            android:name=".NotificationHistoryActivity" 
+            android:exported="false" />
+        <activity 
+            android:name=".NotificationCenterActivity" 
+            android:exported="false" />
+        <activity 
+            android:name=".ComposeNotificationActivity" 
+            android:exported="false" />
         <activity
             android:name=".SignUpActivity"
             android:exported="false" />
