Created entrant and organizer admin views (docstrings pending)

--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -65,7 +65,13 @@
             android:name=".AdminImagesActivity"
             android:exported="false" />
         <activity
+            android:name=".AdminProfilesActivity"
+            android:exported="false" />
+        <activity
             android:name=".ImageDetailsAdminActivity"
+            android:exported="false" />
+        <activity
+            android:name=".UserDetailsAdminActivity"
             android:exported="false" />
         <activity
             android:name=".SignInActivity"
