Lottery works and updfates firestore correctly and redraws correctly

--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
         <activity 
             android:name=".NotificationHistoryActivity" 
             android:exported="false" />
+        <activity
+            android:name=".EventInvitesActivity"
+            android:exported="false" />
         <activity 
             android:name=".NotificationCenterActivity" 
             android:exported="false" />
